Added commandline argument support

--- a/error.html
+++ b/error.html
@@ -8,10 +8,6 @@
   </head>
   <body>
     <h1>Oops!</h1>
-    <img
-      src="https://assets-kirans.vercel.app/images/Kiran-S-profile-pic.jpg"
-      alt="Kiran S"
-    />
-    <p>Sorry, I don't know what you're asking for.</p>
+    <h3>Sorry, I don't know what you're asking for.</h3>
   </body>
 </html>
