--- a/welcome.html
+++ b/welcome.html
@@ -8,10 +8,6 @@
   </head>
   <body>
     <h1>Welcome!</h1>
-    <img
-      src="https://assets-kirans.vercel.app/images/Kiran-S-profile-pic.jpg"
-      alt="Kiran S"
-    />
-    <p>Hi, this is a boilerplate response</p>
+    <h3>Your GET request is successful.</h3>
   </body>
 </html>
